# libmali

include/: CMakeLists.txt  gbm.h
include/EGL/: egl.h  eglext.h  eglplatform.h
include/GLES/: gl.h  glext.h  glplatform.h
include/GLES2/: gl2.h  gl2ext.h  gl2platform.h
include/GLES3/: gl3.h  gl31.h  gl32.h  gl3platform.h
include/KHR/: mali_khrplatform.h
lib/: CMakeLists.txt
pkgconfig/: CMakeLists.txt  OpenCL.pc.cmake  gbm.pc.cmake  gles_cm.pc.cmake  glesv2.pc.cmake  wayland-egl.pc.cmake
