cmake_minimum_required(VERSION 3.2)

PROJECT(MaliHeaders NONE)
INCLUDE(GNUInstallDirs)

INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/EGL"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
PATTERN "eglplatform.h" EXCLUDE)

INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/KHR"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/GLES"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/GLES2"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/GLES3"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")

# Both Mali-T860 support up to OpenCL 1.2
if(GPU_FEATURE MATCHES "opencl")
INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/CL"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")

CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/mali.icd.cmake"
	"${CMAKE_CURRENT_BINARY_DIR}/mali.icd" @ONLY)

INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/mali.icd"
DESTINATION "${CMAKE_INSTALL_SYSCONFDIR}/OpenCL/vendors")
endif(GPU_FEATURE MATCHES "opencl")

# Except the for gbm display platform, only for wayland
# included the gbm features actually.
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/gbm.h"
DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
